refactor: 26 refactor scriptingHelper, change httpUtils to httpHelper and fix tests