@@ -36,22 +36,26 @@ public class ScriptingHelper {
         return evalContext;
     }
 
-    public Object evaluateScripts(String toEval, Map<String, Object> evalContext) {
-        Bindings bindings = createBindingsWithContext(evalContext);
+    public Object evaluateScripts(Object toEval, Map<String, Object> context, Map<String, String> requestBody, Map<String, String> requestParams) {
+        if (containsScript(toEval.toString())) {
+            Map<String, Object> evalContext = setupEvalContext(context, requestBody, requestParams);
+            Bindings bindings = createBindingsWithContext(evalContext);
 
-        List<String> nonScriptSlices = Arrays.stream(toEval.split(SCRIPT_REGEX)).toList();
-        List<Object> evaluatedScripts = Pattern.compile(SCRIPT_REGEX, Pattern.MULTILINE).matcher(toEval).results()
-            .map(matchResult -> matchResult.group(0))
-            .map(scriptToExecute -> setupObjectsInScript(removeScriptWrapper(scriptToExecute), bindings, evalContext))
-            .map(evaluableScript -> evaluate(bindings, evaluableScript))
-            .collect(toList());
+            List<String> nonScriptSlices = Arrays.stream(toEval.toString().split(SCRIPT_REGEX)).toList();
+            List<Object> evaluatedScripts = Pattern.compile(SCRIPT_REGEX, Pattern.MULTILINE).matcher(toEval.toString()).results()
+                .map(matchResult -> matchResult.group(0))
+                .map(scriptToExecute -> setupObjectsInScript(removeScriptWrapper(scriptToExecute), bindings, evalContext))
+                .map(evaluableScript -> evaluate(bindings, evaluableScript))
+                .collect(toList());
 
-        if (nonScriptSlices.isEmpty()) {
-            return evaluatedScripts.size() == 1 ? evaluatedScripts.get(0) : evaluatedScripts.stream().reduce("", (o, o2) -> o + o2.toString());
+            if (nonScriptSlices.isEmpty()) {
+                return evaluatedScripts.size() == 1 ? evaluatedScripts.get(0) : evaluatedScripts.stream().reduce("", (o, o2) -> o + o2.toString());
+            }
+            return nonScriptSlices.stream()
+                .map(nonScriptSlice -> evaluatedScripts.isEmpty() ? nonScriptSlice : nonScriptSlice + evaluatedScripts.remove(0))
+                .reduce("", (s, s2) -> s + s2);
         }
-        return nonScriptSlices.stream()
-            .map(nonScriptSlice -> evaluatedScripts.isEmpty() ? nonScriptSlice : nonScriptSlice + evaluatedScripts.remove(0))
-            .reduce("", (s, s2) -> s + s2);
+        return toEval;
     }
 
     private Bindings createBindingsWithContext(Map<String, Object> evalContext) {
